--- a/port.html
+++ b/port.html
@@ -161,7 +161,7 @@
                         <img src="assets\img\Screenshot 2025-08-21 061156.png" alt="">
 
                         <div class="portfolio__link">
-                            <a href="assets/img/LivoXpert.mp4" class="portfolio__link-name">Video</a>
+                            <a href="https://youtu.be/c_0H0K-8q0Q" class="portfolio__link-name">Video</a>
                             <p>--</p>
                             
                             <a href="assets/img/LivoXpert Abstract 3.pdf" class="portfolio__link-name">Abstract</a>
@@ -171,7 +171,7 @@
                         <img src="assets/img/Screenshot 2025-08-21 014849.png" alt="">
 
                         <div class="portfolio__link">
-                            <a href="assets/img/LivoXpert.mp4" class="portfolio__link-name">Video</a>
+                            <a href="https://youtu.be/c_0H0K-8q0Q" class="portfolio__link-name">Video</a>
                             <p>--</p>
                             
                             <a href="assets/img/LivoXpert Abstract 3.pdf" class="portfolio__link-name">Abstract</a>
@@ -295,6 +295,7 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
 
 
 
