--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     <img src="assets/img/cer1.png" alt="Certificate 1">
     <img src="assets/img/cer2.jpg" alt="Certificate 2">
     <img src="assets/img/cer3.png" alt="Certificate 3">
-    <img src="assets/img/cer4.png" alt="Certificate 4">
+    <img src="assets/img/cer4.png" class="nn" alt="Certificate 4">
     <img src="assets/img/cer5.png" alt="Certificate 5">
     <img src="assets/img/cer6.png" alt="Certificate 6">
     <img src="assets/img/cer7.png" alt="Certificate 7">
@@ -295,6 +295,7 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
 
 
 
