--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
     <img src="assets/img/cer7.png" alt="Certificate 7">
     <img src="assets/img/cer8.png" alt="Certificate 8">
     <img src="assets/img/cer9.png" alt="Certificate 9">
+    <img src="assets/img/cer10.png" alt="Certificate 10">
 
 
   </div>
@@ -295,6 +296,7 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
 
 
 
